<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_restaurant_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <android.support.design.widget.AppBarLayout
        android:id="@+id/baseAppbarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:background="@android:color/transparent">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/baseCollapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="@color/color_primary_dark"
            android:fitsSystemWindows="true"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp" >

            <RelativeLayout
                android:id="@+id/detailsViewCollapsingView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:id="@+id/detailsViewImageHeader"
                    app:srcCompat="@drawable/weiss"
                    android:scaleType="fitXY"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true" />
            </RelativeLayout>

            <android.support.v7.widget.Toolbar android:id="@+id/details_toolbar"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:elevation="4dp"
                android:background="@android:color/transparent"
                app:layout_collapseMode="parallax"
                app:titleTextColor="@color/color_white"
                app:subtitleTextColor="@color/color_white"
                app:layout_scrollFlags="scroll|enterAlways"
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto" />

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabFavorite"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:elevation="4dp"
        android:src="@drawable/ic_favorite"
        app:pressedTranslationZ="12dp"
        android:layout_margin="16dp"
        android:backgroundTint="@color/color_primary_accent"
        app:layout_anchor="@id/baseAppbarLayout"
        app:layout_anchorGravity="right|bottom|end"
        app:elevation="24dp"
        app:fabSize="normal" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="fill_vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|enterAlways"
            android:backgroundTint="@color/bkg_card"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <RelativeLayout
                android:id="@+id/detailsViewScrollingView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/captionAddress"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:id="@+id/captionAddress"
                    android:layout_marginTop="14dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="8dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address"
                    android:textSize="14sp"
                    android:id="@+id/textAddress"
                    android:layout_toEndOf="@id/captionAddress"
                    android:layout_marginTop="14dp"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="80dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/captionSchedule"
                    android:textSize="14sp"
                    android:id="@+id/captionSchedule"
                    android:textStyle="bold"
                    android:layout_below="@id/captionAddress"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="8dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/schedule"
                    android:textSize="14sp"
                    android:id="@+id/textSchedule"
                    android:layout_toEndOf="@id/captionSchedule"
                    android:layout_below="@id/textAddress"
                    android:layout_marginTop="5dp"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="80dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/captionContact"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:id="@+id/captionContact"
                    android:layout_below="@id/captionSchedule"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="8dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contact"
                    android:textSize="14sp"
                    android:id="@+id/textContact"
                    android:layout_toEndOf="@id/captionContact"
                    android:layout_below="@id/textSchedule"
                    android:layout_marginTop="5dp"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="80dp" />

                <GridView
                    android:id="@+id/imagesGridView"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/captionContact"
                    android:layout_marginTop="32dp"
                    android:columnWidth="100dp"
                    android:drawSelectorOnTop="true"
                    android:gravity="center"
                    android:numColumns="auto_fit"
                    android:stretchMode="columnWidth"
                    android:verticalSpacing="5dp"
                    android:focusable="true"
                    android:clickable="true"/>

                <Button
                    android:text="@string/textBtnContact"
                    android:layout_width="175dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnContact"
                    android:backgroundTint="@color/button_bg_color"
                    android:elevation="6dp"
                    android:paddingStart="6dp"
                    android:paddingEnd="6dp"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_below="@+id/imagesGridView"
                    android:layout_marginTop="24dp" />

                <Button
                    android:text="@string/textBtnBook"
                    android:layout_width="175dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/bookNow"
                    android:backgroundTint="@color/button_bg_color"
                    android:elevation="6dp"
                    android:paddingStart="6dp"
                    android:paddingEnd="6dp"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_below="@+id/imagesGridView"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="24dp" />
            </RelativeLayout>
        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>
